template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: AWS CloudFormation KestraLab

Parameters:
  Name:
    Type: String
    Default: KestraLab

  SshTunnelUser:
    Type: String
  SshTunnelPassword:
    Type: String
    NoEcho: true

Resources:

  # Network

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${Name}

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  GatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  InternetRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetA
      RouteTableId: !Ref RouteTable

  SubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      Tags:
        - Key: Name
          Value: !Sub ${Name}A

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub ${Name}
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 10.0.1.0/24
        - IpProtocol: tcp
          FromPort: 2049
          ToPort: 2049
          CidrIp: 10.0.1.0/24     
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8081
          CidrIp: 10.0.1.0/24
        - IpProtocol: tcp
          FromPort: 2222
          ToPort: 2222
          CidrIp: 0.0.0.0/0        

  # Cloud Map

  CloudMapNamespace:
    Type: AWS::ServiceDiscovery::PrivateDnsNamespace
    Properties:
      Name: !Sub ${Name}
      Vpc: !Ref VPC

  PostgresServiceDiscoveryService:
    Type: AWS::ServiceDiscovery::Service
    Properties:
      Name: !Sub ${Name}Postgres
      Description: Discover PostgreSQL service
      NamespaceId: 
        Ref: CloudMapNamespace
      DnsConfig:
        DnsRecords:
          - Type: A
            TTL: 60        
      HealthCheckCustomConfig:
        FailureThreshold: 1            
  
  # ECS Cluster and EFS

  EcsCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub ${Name}

  EfsFileSystem:
    Type: AWS::EFS::FileSystem
    Properties:
      PerformanceMode: generalPurpose
      Encrypted: true
      LifecyclePolicies:
        - TransitionToIA: AFTER_30_DAYS

  EfsMountTarget1:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId: !Ref EfsFileSystem
      SubnetId: !Ref SubnetA
      SecurityGroups: 
        - !Ref SecurityGroup

  # ECS Task Definitions

  KestraTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: !Sub ${Name}
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Cpu: 4096
      Memory: 8GB
      TaskRoleArn: !Ref ECSTaskRole
      ExecutionRoleArn: !Ref ECSTaskExecutionRole       
      ContainerDefinitions:
        - Name: !Sub ${Name}
          Image: kestra/kestra:latest-full
          Command: ["server", "standalone", "--worker-thread=128"]
          PortMappings:
            - ContainerPort: 8080
          MountPoints:
            - ContainerPath: /app/storage
              SourceVolume: !Sub ${Name}
          Environment:
            - Name: KESTRA_CONFIGURATION
              Value: !Sub |
                datasources:
                  postgres:
                    url: jdbc:postgresql://${Name}Postgres.${Name}:5432/kestra
                    driverClassName: org.postgresql.Driver
                    username: kestra
                    password: k3str4
                kestra:
                  server:
                    basic-auth:
                      enabled: false
                      username: admin@kestra.io
                      password: kestra
                  repository:
                    type: postgres
                  storage:
                    type: local
                    local:
                      base-path: "/app/storage"
                  queue:
                    type: postgres
                  tasks:
                    tmp-dir:
                      path: /tmp/kestra-wd/tmp
                  url: http://localhost:8080/
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-region: !Ref AWS::Region
              awslogs-group: !Ref KestraServiceLogGroup
              awslogs-stream-prefix: ecs
      Volumes:
        - Name: !Sub ${Name}
          EFSVolumeConfiguration:
            FilesystemId: !Ref EfsFileSystem

  PostgresTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: !Sub ${Name}Postgres
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Cpu: 2048
      Memory: 4GB
      TaskRoleArn: !Ref ECSTaskRole
      ExecutionRoleArn: !Ref ECSTaskExecutionRole    
      ContainerDefinitions:
        - Name: !Sub ${Name}Postgres
          Image: postgres:latest
          PortMappings:
            - ContainerPort: 5432
          MountPoints:
            - ContainerPath: /var/lib/postgresql/data
              SourceVolume: !Sub ${Name}Postgres
          Environment:
            - Name: POSTGRES_DB
              Value: kestra
            - Name: POSTGRES_USER
              Value: kestra
            - Name: POSTGRES_PASSWORD
              Value: k3str4
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-region: !Ref AWS::Region
              awslogs-group: !Ref PostgresServiceLogGroup
              awslogs-stream-prefix: ecs
      Volumes:
        - Name: !Sub ${Name}Postgres
          EFSVolumeConfiguration:
            FilesystemId: !Ref EfsFileSystem

  SshTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: !Sub ${Name}Ssh
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Cpu: 256
      Memory: 0.5GB
      TaskRoleArn: !Ref ECSTaskRole
      ExecutionRoleArn: !Ref ECSTaskExecutionRole       
      ContainerDefinitions:
        - Name: !Sub ${Name}Ssh
          Image: linuxserver/openssh-server:latest
          PortMappings:
            - ContainerPort: 2222
          Environment:
            - Name: DOCKER_MODS
              Value: "linuxserver/mods:openssh-server-ssh-tunnel"           
            - Name: PUID
              Value: "1000"
            - Name: PGID
              Value: "1000"
            - Name: TZ
              Value: "Etc/UTC"
            - Name: PASSWORD_ACCESS
              Value: "true"
            - Name: USER_NAME
              Value: !Ref SshTunnelUser
            - Name: USER_PASSWORD
              Value: !Ref SshTunnelPassword 
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-region: !Ref AWS::Region
              awslogs-group: !Ref SshServiceLogGroup
              awslogs-stream-prefix: ecs

  # ECS Services

  KestraService:
    Type: AWS::ECS::Service
    Properties:
      ServiceName: !Sub ${Name}
      Cluster: !Ref EcsCluster
      TaskDefinition: !Ref KestraTaskDefinition
      DesiredCount: 0 # Stop initially, increase to start
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets: 
            - !Ref SubnetA
          SecurityGroups:
            - !Ref SecurityGroup
      SchedulingStrategy: REPLICA

  PostgresService:
    Type: AWS::ECS::Service
    Properties:
      ServiceName: !Sub ${Name}Postgres
      Cluster: !Ref EcsCluster
      TaskDefinition: !Ref PostgresTaskDefinition
      DesiredCount: 0 # Stop initially, increase to start
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets: 
            - !Ref SubnetA
          SecurityGroups:
            - !Ref SecurityGroup
      SchedulingStrategy: REPLICA
      ServiceRegistries:
        - RegistryArn: !GetAtt PostgresServiceDiscoveryService.Arn

  SshService:
    Type: AWS::ECS::Service
    Properties:
      ServiceName: !Sub ${Name}Ssh
      Cluster: !Ref EcsCluster
      TaskDefinition: !Ref SshTaskDefinition
      DesiredCount: 0 # Stop initially, increase to start
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets: 
            - !Ref SubnetA
          SecurityGroups:
            - !Ref SecurityGroup
      SchedulingStrategy: REPLICA       

  # Logs
  
  KestraServiceLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /ecs/${Name}
  
  PostgresServiceLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /ecs/${Name}Postgres

  SshServiceLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /ecs/${Name}Ssh       

  # Roles and Policies

  ECSTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub ${Name}ECSTaskExecutionRole
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service: "ecs-tasks.amazonaws.com"
            Action: "sts:AssumeRole"
      Path: "/"
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
      Policies:
        - PolicyName: !Sub ${Name}TaskExecutionPolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: "Allow"
                Action:
                  - elasticfilesystem:ClientMount
                  - elasticfilesystem:ClientWrite
                  - elasticfilesystem:DescribeMountTargets
                  - elasticfilesystem:DescribeFileSystems
                Resource: !GetAtt EfsFileSystem.Arn

  ECSTaskRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub ${Name}TaskRole
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service: "ecs-tasks.amazonaws.com"
            Action: "sts:AssumeRole"
      Path: "/"
